# pod-lifetime-limiter

./: Cargo.toml  Dockerfile  LICENSE  README.md
examples/: some-limit.yaml
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml  role.yaml  serviceaccount.yaml
src/: crdgen.rs  main.rs  manager.rs  pll.rs
