[package]
name = "pod-lifetime-limiter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.69.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.14.0", features = ["v1_22"] }
tokio = { version = "1", features = ["full"] }
anyhow = { version = "1.0" }
serde_json = { version = "1.0" }
chrono = "0.4"
tracing-subscriber = "0.3"
tracing = "0.1"
