[package]
name = "pod-lifetime-limiter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.69.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.14.0", features = ["v1_22"] }
tokio = { version = "1", features = ["full"] }
anyhow = { version = "1.0" }
serde_json = { version = "1.0" }
chrono = "0.4"
tracing-subscriber = "0.3"
tracing = "0.1"
openssl = { version = "0.10.32", features = ["vendored"] }
openssl-sys = "0.9.72"
serde_yaml = "0.8.23"
schemars = { version = "0.8.8", features = ["chrono"] }
serde = { version = "1.0.136", features = ["derive"] }

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"
